# mesh

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release-mesh.yml
config/: mesh-fleet-state.mjs
scripts/: tauri-cli.mjs  versioning.mjs
skills/agent/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
skills/global/hello-mesh/: SKILL.md
skills/global/ping-request/: SKILL.md
skills/global/start-convo/: SKILL.md
skills/global/use-mesh/: SKILL.md
skills/global/use-mesh/daytona-sandbox/: SKILL.md
skills/global/use-mesh/reputation/: SKILL.md
skills/global/use-mesh/shared-knowledge/: SKILL.md
skills/global/use-mesh/shared-learnings/: SKILL.md
skills/global/use-mesh/update-manifest/: SKILL.md
skills/global/use-tools/: SKILL.md
skills/global/use-tools/ask-account/: SKILL.md
skills/global/use-tools/ask-connector/: SKILL.md
skills/global/use-tools/backpack-read/: SKILL.md
skills/global/use-tools/core/: SKILL.md
skills/global/use-tools/internal-notes/: SKILL.md
skills/global/use-tools/store-read/: SKILL.md
skills/global/write-report/: SKILL.md
src/: App.tsx  styles.css  vite-env.d.ts
src/components/: AgentManager.tsx  DeepLinkHandler.tsx  SessionStatus.tsx  SkillsManager.tsx  SkillsMarketplace.tsx  agent-details.tsx  deep-link.tsx  manager.tsx  mesh.tsx  session.tsx  skills-manager.tsx  skills-store.tsx
src/features/agents/: model.ts  pages.tsx
src/features/mesh/: index.ts  manifest.ts  model.ts  page.tsx  runtime.ts  stage-model.ts
src/features/permissions/: agent-permissions.tsx  app-permissions.tsx  index.tsx  settings.tsx
src/lib/: agent.ts  api.ts  daemon.ts  deploy.ts  heartbeat.ts  local-agent.ts  local-deploy.ts  mesh-bootstrap.ts  network.ts  permissions.ts  skills.ts  storage.ts  types.ts  updater.ts
tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: host.rs  learnings.rs  lib.rs  main.rs  manifest.rs  mesh.rs  permissions.rs  publication.rs  release.rs  runtime_host.rs
