[package]
name = "compose-mesh"
version = "0.9.6"
description = "Compose Mesh local runtime for autonomous agents"
authors = ["Compose"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
sha2 = "0.10"
sha3 = "0.10"
futures = "0.3"
libp2p = { version = "0.54", features = ["tokio", "tcp", "dns", "noise", "yamux", "identify", "ping", "gossipsub", "kad", "relay", "dcutr", "autonat", "rendezvous", "macros"] }
tokio = { version = "1", features = ["sync", "time", "macros", "process"] }
void = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
